--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,5 +1,3 @@
-/* GENERAL */
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 * {
@@ -16,8 +14,6 @@ body {
 html {
   scroll-behavior: smooth;
 }
-
-/* TRANSITION */
 
 a,
 .btn {
@@ -152,7 +148,7 @@ a:hover {
   transform: none;
 }
 
-/* SECTIONS */
+/* SECTIONS IN GENERAL */
 
 section {
   padding-top: 4vh;
